--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,12 @@
 image:
   file: .gitpod.dockerfile
 tasks:
- - init: . ${GITPOD_REPO_ROOT}/init_tasks.sh    
+ - init: . ${GITPOD_REPO_ROOT}/.theia/init_tasks.sh    
 vscode:
   extensions:
     - ms-python.python@2019.8.30787:TnGEOx35GXMhyKLjDGz9Aw==
-    - formulahendry.auto-close-tag@0.5.6:oZ/8R2VhZEhkHsoeO57hSw==
-    - mkaufman.HTMLHint@0.6.0:TdNYbCmjW8N3yiaPW4/adg==
-    - eventyret.bootstrap-4-cdn-snippet@1.2.3:7CBqCsMp6UjSKmG+LTaUGw==
+    - formulahendry.auto-close-tag@0.5.9:JZIefALANqOfhSK1TU4+Fw==
+    - mkaufman.HTMLHint@0.10.0:xevX4CvYOkKd8xjvtJQiGQ==
+    - eventyret.bootstrap-4-cdn-snippet@1.9.0:I8wcXFcKWQIROg7J0SLLqg==
+    - esbenp.prettier-vscode@5.7.1:4Zx39KyQMoIz7x94PSmDmQ==
+    - kevinglasson.cornflakes-linter@0.5.1:KAaMshgHOKan8eojXQ53OQ==
