updated requirements.txt and fixed produkt.js - images and variables

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,20 +12,20 @@ bson==0.5.10
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
-click==7.1.2
+click==8.0.4
 colorama==0.4.4
 cryptography==36.0.1
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.4
-dnspython==2.1.0
+dnspython==2.2.1
 docutils==0.18.1
 entrypoints==0.4
 executing==0.8.2
 filelock==3.6.0
 flake8==4.0.1
-Flask==1.1.2
+Flask==2.1.1
 Flask-PyMongo==2.3.0
 gitdb==4.0.9
 GitPython==3.1.27
@@ -36,7 +36,7 @@ ipykernel==6.9.1
 ipython==8.0.1
 ipython-genutils==0.2.0
 isort==5.10.1
-itsdangerous==1.1.0
+itsdangerous==2.1.2
 jedi==0.18.1
 jeepney==0.7.1
 Jinja2==3.0.3
@@ -79,10 +79,11 @@ pyflakes==2.4.0
 Pygments==2.11.2
 pylama==8.3.7
 pylint==2.12.2
-pymongo==3.11.3
+pymongo==4.1.1
 pyparsing==3.0.7
 pyrsistent==0.18.1
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 PyYAML==6.0
 pyzmq==22.3.0
 readme-renderer==32.0
@@ -111,6 +112,6 @@ virtualenv==20.13.1
 virtualenv-clone==0.5.7
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
+Werkzeug==2.1.1
 wrapt==1.13.3
 zipp==3.7.0
